# NEOCOOP

./: CMakeLists.txt  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
Client/: CMakeLists.txt
Server/: CMakeLists.txt
Server/src/: Server.hpp  main.cpp
